package domain.game;

public enum CardType {
    EXPLODING_KITTEN,
    DEFUSE,
    NOPE,
    SHUFFLE
}
